--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -66,6 +66,7 @@
             </td>
             <td class="table-list_head-tr_td">입사일</td>
             <td class="table-list_head-tr_td">휴대폰 번호</td>
+            <td class="table-list_head-tr_td">비상연락망(관계)</td>
             <td class="table-list_head-tr_td">생년월일</td>
             <td class="table-list_head-tr_td">주소</td>
             <td class="table-list_head-tr_td">면허증</td>
@@ -134,27 +135,32 @@
               class="popupArticleinput PopupDataInputEntering">
           </div>
           <div class="popupArticleDouble">
-            <label for="" class="popupArticleLabel">휴대폰번호</label>
-            <input autocomplete="off" name="phone_num" type="text" class="popupArticleinput PopupDataInputPhoneNum"
-              placeholder="'-'을 생략하고 입력해 주세요.">
-          </div>
-        </div>
-        <div class="popupArticleBox">
-          <div class="popupArticleDouble">
             <label for="" class="popupArticleLabel">생년월일</label>
             <input autocomplete="off" name="birthdate" type="text" class="popupArticleinput PopupDataInputBirth"
               placeholder="ex)19990101">
           </div>
+        </div>
+        <div class="popupArticleBox">
+          <div class="popupArticleDouble">
+            <label for="" class="popupArticleLabel">휴대폰번호</label>
+            <input autocomplete="off" name="phone_num" type="text" class="popupArticleinput PopupDataInputPhoneNum"
+              placeholder="'-'을 생략하고 입력해 주세요.">
+          </div>
+          <div class="popupArticleDouble">
+            <label for="" class="popupArticleLabel">비상연락망</label>
+            <input autocomplete="off" name="emergency" type="text" class="popupArticleinput PopupDataInputEmergency"
+              placeholder="ex) 010-1234-5678(부)">
+          </div>
+        </div>
+        <div class="popupArticleBox">
           <div class="popupArticleDouble">
             <label for="" class="popupArticleLabel">주소</label>
             <input autocomplete="off" name="address" type="text" class="popupArticleinput PopupDataInputAddress">
           </div>
-        </div>
-        <div class="popupArticleBox">
-          <div class="popupArticle">
+          <div class="popupArticleDouble">
             <label for="" class="popupArticleLabel">비고</label>
             <input autocomplete="off" name="note" type="text"
-              class="popupArticleinput popupArticleInputDouble PopupDataInputBlack">
+              class="popupArticleinput PopupDataInputBlack">
           </div>
         </div>
         <div class="popupArticleCategori">운전정보</div>
@@ -258,26 +264,31 @@
               class="popupArticleinput hrEntering">
           </div>
           <div class="popupArticleDouble">
-            <label for="" class="popupArticleLabel">휴대폰번호</label>
-            <input autocomplete="off" name="phone_num" type="text" class="popupArticleinput hrPhone"
-              placeholder="'-'을 생략하고 입력해 주세요.">
-          </div>
-        </div>
-        <div class="popupArticleBox">
-          <div class="popupArticleDouble">
             <label for="" class="popupArticleLabel">생년월일</label>
             <input autocomplete="off" name="birthdate" type="text" class="popupArticleinput hrBirth"
               placeholder="ex)19990101">
           </div>
+        </div>
+        <div class="popupArticleBox">
+          <div class="popupArticleDouble">
+            <label for="" class="popupArticleLabel">휴대폰번호</label>
+            <input autocomplete="off" name="phone_num" type="text" class="popupArticleinput hrPhone"
+              placeholder="'-'을 생략하고 입력해 주세요.">
+          </div>
+          <div class="popupArticleDouble">
+            <label for="" class="popupArticleLabel">비상연락망</label>
+            <input autocomplete="off" name="emergency" type="text" class="popupArticleinput hrEmergency"
+              placeholder="ex) 010-1234-5678(부)">
+          </div>
+        </div>
+        <div class="popupArticleBox">
           <div class="popupArticleDouble">
             <label for="" class="popupArticleLabel">주소</label>
             <input autocomplete="off" name="address" type="text" class="popupArticleinput hrAddress">
           </div>
-        </div>
-        <div class="popupArticleBox">
-          <div class="popupArticle">
+          <div class="popupArticleDouble">
             <label for="" class="popupArticleLabel">비고</label>
-            <input autocomplete="off" name="note" type="text" class="popupArticleinput popupArticleInputDouble hrBlank">
+            <input autocomplete="off" name="note" type="text" class="popupArticleinput hrBlank">
           </div>
         </div>
         <div class="popupArticleCategori">운전정보</div>
