--- a/static/css/accounting/income.css
+++ b/static/css/accounting/income.css
@@ -237,15 +237,19 @@
 }
 
 .table-list td:nth-child(1){
-    width: 45%;
+    width: 40%;
 }
 
 .table-list td:nth-child(2){
-    width: 20%;
+    width: 18%;
 }
 
 .table-list td:nth-child(3){
-    width: 35%;
+    width: 18%;
+}
+
+.table-list td:nth-child(4){
+    width: 24%;
 }
 
 .dashboardBodyCoulmnCell {
