--- a/templates/base.html
+++ b/templates/base.html
@@ -116,10 +116,7 @@
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
-                <!-- <a href="{% url 'accounting:salary' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">급여관리</li>
-                </a> -->
-                <a href="{% url 'accounting:income' %}" class="sideMenuNav2Link">
+                <a href="{% url 'accounting:sales' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">매출현황</li>
                 </a>
                 <a href="{% url 'accounting:deposit' %}" class="sideMenuNav2Link">
